thread messages alignment fixed and hover effects

--- a/src/app/main-page/thread/thread.component.scss
+++ b/src/app/main-page/thread/thread.component.scss
@@ -279,6 +279,7 @@
 
 .message-content {
   max-width: 80%;
+  min-width: 200px;
   background: rgb(236, 238, 254);
   border-radius: 30px;
   border-top-left-radius: 0;
